# OOP_labs

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  main.cpp
lab1/include/: psychiatrist.h
lab1/src/: psychiatrist.cpp
lab1/tests/: tests01.cpp
